// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render a button if one is passed in as a prop 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1ha0qyc-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-15i73xl-MuiCardMedia-root"
    role="img"
    style={
      Object {
        "backgroundImage": "url(\\"test.png\\")",
      }
    }
    title="title"
  >
    <button>
      button
    </button>
  </div>
  <div
    className="MuiCardContent-root css-8okzxw-MuiCardContent-root"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Card component should render the card image and children in a row when orientation is 'row' 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-zqrepa-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-15i73xl-MuiCardMedia-root"
    role="img"
    style={
      Object {
        "backgroundImage": "url(\\"test.png\\")",
      }
    }
    title="title"
  />
  <div
    className="MuiCardContent-root css-8okzxw-MuiCardContent-root"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`Card component should render the card image and content in a column when orientation is 'column' 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1ha0qyc-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-15i73xl-MuiCardMedia-root"
    role="img"
    style={
      Object {
        "backgroundImage": "url(\\"test.png\\")",
      }
    }
    title="title"
  />
  <div
    className="MuiCardContent-root css-8okzxw-MuiCardContent-root"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`should render a button if one is passed in as a prop 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1ha0qyc-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-15i73xl-MuiCardMedia-root"
    role="img"
    style={
      Object {
        "backgroundImage": "url(\\"test.png\\")",
      }
    }
    title="title"
  >
    <button>
      button
    </button>
  </div>
  <div
    className="MuiCardContent-root css-8okzxw-MuiCardContent-root"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`should render the card image and children in a row when orientation is 'row' 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-zqrepa-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-15i73xl-MuiCardMedia-root"
    role="img"
    style={
      Object {
        "backgroundImage": "url(\\"test.png\\")",
      }
    }
    title="title"
  />
  <div
    className="MuiCardContent-root css-8okzxw-MuiCardContent-root"
  >
    <div>
      child
    </div>
  </div>
</div>
`;

exports[`should render the card image and content in a column when orientation is 'column' 1`] = `
<div
  className="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-1ha0qyc-MuiPaper-root-MuiCard-root"
>
  <div
    className="MuiCardMedia-root css-15i73xl-MuiCardMedia-root"
    role="img"
    style={
      Object {
        "backgroundImage": "url(\\"test.png\\")",
      }
    }
    title="title"
  />
  <div
    className="MuiCardContent-root css-8okzxw-MuiCardContent-root"
  >
    <div>
      child
    </div>
  </div>
</div>
`;
